--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -8,6 +8,8 @@
 @import '~bootstrap/scss/bootstrap';
 @import 'header';
 @import 'video';
+@import 'stolen';
+
 .block {
     margin: 40px 0 40px;
 }
@@ -35,4 +37,18 @@
 }
 .bg-grey {
     background-color: #fff;
+}
+.embed-container { 
+    position: relative;
+    padding-bottom: 56.25%;
+    height: 0;
+    overflow: hidden;
+    max-width: 100%;
+}
+.embed-container iframe, .embed-container object, .embed-container embed {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
 }
