--- a/resources/sass/stolen.scss
+++ b/resources/sass/stolen.scss
@@ -32,15 +32,18 @@ background: #eee;
 }
 
 .et-hero-tabs{
-display: flex;
-flex-direction: column;
-justify-content: center;
-align-items: center;
-height: 100vh;
-position: relative;
-background: #eee;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    position: relative;
+    background: #eee;
     text-align: center;
     padding: 0 2em;
+    @media (max-width: 767.98px) {
+        height: 80vh;
+    }
     h1 {
         font-size: 2rem;
         margin: 0;
